@@ -105,6 +105,7 @@ importFrom(purrr,map2)
 importFrom(scales,brewer_pal)
 importFrom(scales,grey_pal)
 importFrom(scales,percent)
+importFrom(sjmisc,copy_labels)
 importFrom(sjmisc,get_label)
 importFrom(sjmisc,get_labels)
 importFrom(sjmisc,get_note)
@@ -157,6 +158,7 @@ importFrom(stats,as.formula)
 importFrom(stats,binomial)
 importFrom(stats,chisq.test)
 importFrom(stats,coef)
+importFrom(stats,complete.cases)
 importFrom(stats,confint)
 importFrom(stats,cor)
 importFrom(stats,cor.test)
@@ -221,6 +223,7 @@ importFrom(tibble,is.tibble)
 importFrom(tibble,lst)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
+importFrom(tidyr,nest)
 importFrom(tidyr,spread)
 importFrom(tidyr,unnest)
 importFrom(utils,setTxtProgressBar)
